started work on extending entity definitions
...with additional context information.
Condition and index contexts can be added, though
condition contexts can't be customized yet.

refs #382

Change-Id: Ie4f5293a40583ccfdb6bda85ac2d95c2bd220b96
Reviewed-on: http://gerrit.esdi-community.eu/854
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.filter/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.filter/plugin.xml
@@ -3,6 +3,14 @@
 <plugin>
    <extension
          point="eu.esdihumboldt.hale.instance.filter">
+      <filterDefinition
+            class="eu.esdihumboldt.hale.common.filter.definition.CQLFilterDefinition"
+            id="eu.esdihumboldt.hale.common.filter.cql">
+      </filterDefinition>
+      <filterDefinition
+            class="eu.esdihumboldt.hale.common.filter.definition.ECQLFilterDefinition"
+            id="eu.esdihumboldt.hale.common.filter.ecql">
+      </filterDefinition>
    </extension>
 
 </plugin>
