modified complete structure to extend functionality
refs #308

Change-Id: I43fd9c6497f4ff503112b39ef18a363889c5a4b2
Reviewed-on: http://gerrit.esdi-community.eu/856
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.csv/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.csv/plugin.xml
@@ -5,32 +5,19 @@
    <extension
          point="eu.esdihumboldt.hale.io.csv.propertyType">
       <propertyType
-            binding="java.lang.String"
+            class="eu.esdihumboldt.hale.io.csv.propertytype.PropertyString"
+            id="java.lang.String"
             name="String">
       </propertyType>
       <propertyType
-            binding="java.lang.Integer"
+            class="eu.esdihumboldt.hale.io.csv.propertytype.PropertyInteger"
+            id="java.lang.Integer"
             name="Integer">
       </propertyType>
       <propertyType
-            binding="java.lang.Float"
+            class="eu.esdihumboldt.hale.io.csv.propertytype.PropertyFloat"
+            id="java.lang.Float"
             name="Float">
-      </propertyType>
-      <propertyType
-            binding="com.vividsolutions.jts.geom.Geometry"
-            name="Geometry">
-      </propertyType>
-      <propertyType
-            binding="com.vividsolutions.jts.geom.Point"
-            name="Point">
-      </propertyType>
-      <propertyType
-            binding="com.vividsolutions.jts.geom.Polygon"
-            name="Polygon">
-      </propertyType>
-      <propertyType
-            binding="com.vividsolutions.jts.geom.MultiPolygon"
-            name="Multipolygon">
       </propertyType>
    </extension>
    <extension
