added swing2swt lib to build properties
Change-Id: I97f9a3f91a23784cf637bc08ee4dcae8318d9d28
Reviewed-on: http://gerrit.esdi-community.eu/858
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>
Tested-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.report/build.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.report/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                OSGI-INF/l10n/,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               swing2swt.jar
