enabled help for TypeFilterDialog
Example for help in a dialog. Context is that of
the filter field.

refs #313
refs #332

Change-Id: I78559da98f14af4d9d71031929c89e2c812825a9

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/plugin.xml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/plugin.xml
@@ -8,4 +8,10 @@
             primary="true">
       </toc>
    </extension>
+   <extension
+         point="org.eclipse.help.contexts">
+      <contexts
+            file="contexts.xml">
+      </contexts>
+   </extension>
 </plugin>
