Added FilteredTree to detailpage.
refs #310

Change-Id: I8f61a2dc4da4cbf1ac9ef4fcd71d5febf25a4cc8
Signed-off-by: Andreas Burchert <andreas.burchert@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
@@ -53,12 +53,12 @@
             </input>
          </propertySection>
          <propertySection
-               class="eu.esdihumboldt.hale.ui.views.report.properties.ReportDetails"
+               class="eu.esdihumboldt.hale.ui.views.report.properties.ReportIODetails"
                enablesFor="1"
                id="eu.esdihumboldt.hale.ui.views.report.properties.details.name"
                tab="eu.esdihumboldt.hale.ui.views.report.properties.details">
             <input
-                  type="eu.esdihumboldt.hale.common.core.report.Report">
+                  type="eu.esdihumboldt.hale.common.core.io.report.IOReport">
             </input>
          </propertySection>
       </propertySections>
