"used" types can no longer be marked as unmappable
refs #351

Change-Id: I461d5f73585b0acb37b3eba634de19a901997200

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -188,9 +188,14 @@
                   <iterate
                         ifEmpty="false"
                         operator="or">
-                     <instanceof
-                           value="eu.esdihumboldt.hale.common.align.model.impl.TypeEntityDefinition">
-                     </instanceof>
+                     <and>
+	                     <instanceof
+	                           value="eu.esdihumboldt.hale.common.align.model.impl.TypeEntityDefinition">
+	                     </instanceof>
+	                     <test
+	                           property="eu.esdihumboldt.hale.ui.service.schema.type.allow_mark_unmappable">
+	                     </test>
+                     </and>
                   </iterate>
                   <count
                         value="1">
@@ -547,6 +552,13 @@
             namespace="eu.esdihumboldt.hale.ui.service.align.cell"
             properties="allow_remove"
             type="eu.esdihumboldt.hale.common.align.model.Cell">
+      </propertyTester>
+      <propertyTester
+            class="eu.esdihumboldt.hale.ui.service.schema.tester.TypeEntityDefinitionTester"
+            id="eu.esdihumboldt.hale.ui.service.schema.type"
+            namespace="eu.esdihumboldt.hale.ui.service.schema.type"
+            properties="allow_mark_unmappable"
+            type="eu.esdihumboldt.hale.common.align.model.impl.TypeEntityDefinition">
       </propertyTester>
    </extension>
    <extension
