classification mapping function improvement
it now lets the user decide what happens if a source value is not mapped

refs #358

Change-Id: Ic6718905b1d258586f1fe44f90d55a0a9970a013

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -100,6 +100,11 @@
                minOccurrence="1"
                name="classificationMapping">
          </functionParameter>
+         <functionParameter
+               maxOccurrence="1"
+               minOccurrence="0"
+               name="notClassifiedAction">
+         </functionParameter>
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.hale.align.general"
