classification mapping function improvement
it now lets the user decide what happens if a source value is not mapped

refs #358

Change-Id: Ic6718905b1d258586f1fe44f90d55a0a9970a013
Reviewed-on: http://gerrit.esdi-community.eu/909
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -30,6 +30,9 @@
          <parameter
                name="classificationMapping">
          </parameter>
+         <parameter
+               name="notClassifiedAction">
+         </parameter>
       </propertyParameterPage>
       <propertyParameterPage
             class="eu.esdihumboldt.hale.ui.functions.core.FormattedStringParameterPage"
