explanation for classificationmapping function
refs #358
refs #374

Change-Id: Ie2f4b159dc9b7694ef75a1b029a1105ad2080d3a
Reviewed-on: http://gerrit.esdi-community.eu/910
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -78,6 +78,7 @@
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.hale.align.general"
+            cellExplanation="eu.esdihumboldt.hale.common.align.model.functions.explanations.ClassificationMappingExplanation"
             description="Map classifications"
             identifier="eu.esdihumboldt.hale.align.classification"
             name="Classification">
