some cell explanations
only OrdinatesToPoint is missing

refs #374

Change-Id: I6da941e37efea9c80f522ea52a8f4375132fb8c5

--- a/cst/plugins/eu.esdihumboldt.cst.functions.string/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.string/plugin.xml
@@ -15,6 +15,7 @@
       <propertyFunction
             category="eu.esdihumboldt.hale.align.general"
             description="Extracts a date from a string type"
+            cellExplanation="eu.esdihumboldt.cst.functions.string.DateExtractionExplanation"
             identifier="eu.esdihumboldt.cst.functions.string.dateextraction"
             name="Date extraction">
          <sourceProperties>
