--- a/cst/plugins/eu.esdihumboldt.cst.functions.groovy/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.groovy/plugin.xml
@@ -5,6 +5,7 @@
          point="eu.esdihumboldt.hale.align.function">
       <propertyFunction
             description="Use a groovy script to derive a target property value."
+            cellExplanation="eu.esdihumboldt.cst.functions.groovy.GroovyExplanation"
             icon="icons/star.png"
             identifier="eu.esdihumboldt.cst.functions.groovy"
             name="Groovy script">
