--- a/cst/plugins/eu.esdihumboldt.cst.functions.numeric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.numeric/plugin.xml
@@ -13,6 +13,7 @@
          point="eu.esdihumboldt.hale.align.function">
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.numeric"
+            cellExplanation="eu.esdihumboldt.cst.functions.numeric.MathematicalExpressionExplanation"
             description="Define a value using a mathematical expression with support for variables"
             help="help/mathematicalExpression/help.xhtml"
             icon="icons/exp.gif"
