--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -87,6 +87,14 @@
                name="introBrandingImage"
                value="images/hale_icon.png">
          </property>
+         <property
+               name="startupProgressRect"
+               value="4,281,472,15">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
       </product>
    </extension>
    <extension
