explanation for OrdinatesToPoint
refs #374

Change-Id: Ia6dc1ab741f29adf26b8a4e9e784f9254b39a27b

--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -13,6 +13,7 @@
       <propertyFunction
             category="eu.esdihumboldt.cst.functions.geometric"
             description="Creates a point from a X, Y and optionally a Z ordinate"
+            cellExplanation="eu.esdihumboldt.cst.functions.geometric.OrdinatesToPointExplanation"
             icon="icons/geometry.png"
             identifier="eu.esdihumboldt.cst.functions.geometric.ordinates_to_point"
             name="Ordinates to Point">
