added report and functions view to HALE category
Change-Id: I92f8c5a92cb1d65337ff9f937b32a4cba460d0ba

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
@@ -4,6 +4,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
+            category="eu.esdihumboldt.hale.ui"
             class="eu.esdihumboldt.hale.ui.views.report.ReportList"
             icon="icons/ft_stylelist.gif"
             id="eu.esdihumboldt.hale.ui.views.report.ReportList"
