changed version number to 2.5.0.M1
Change-Id: I187047f25356db76ecc23ae64eaf9b99e28d52d8
Reviewed-on: http://gerrit.esdi-community.eu/935
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -77,7 +77,7 @@
          </property>
          <property
                name="aboutText"
-               value="HUMBOLDT Alignment Editor (HALE)&#x0A;&#x0A;Version 2.5.0.alpha&#x0A;&#x0A;Build ___build___&#x0A;Revision ___revision___&#x0A;&#x0A;http://www.esdi-community.eu/projects/show/hale">
+               value="HUMBOLDT Alignment Editor (HALE)&#x0D;&#x0A;&#x0D;&#x0A;Version 2.5.0.M1&#x0D;&#x0A;&#x0D;&#x0A;Build ___build___&#x0D;&#x0A;Revision ___revision___&#x0D;&#x0A;&#x0D;&#x0A;http://www.esdi-community.eu/projects/show/hale">
          </property>
          <property
                name="introTitle"
