added map perspective to default perspectives
Change-Id: Ic782e8351708c62d9d7950ae9d6d04654b9fc0fd
Reviewed-on: http://gerrit.esdi-community.eu/936
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin_customization.ini
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin_customization.ini
@@ -1,4 +1,4 @@
-org.eclipse.ui/PERSPECTIVE_BAR_EXTRAS=eu.esdihumboldt.hale.ui.application.perspective.data
+org.eclipse.ui/PERSPECTIVE_BAR_EXTRAS=eu.esdihumboldt.hale.ui.application.perspective.data,eu.esdihumboldt.hale.ui.views.styledmap
 org.eclipse.ui/KEY_CONFIGURATION_ID=eu.esdihumboldt.hale.ui.application.bindings
 org.eclipse.ui/DOCK_PERSPECTIVE_BAR=TOP_RIGHT
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = true
