--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/.settings/org.eclipse.core.resources.prefs
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Thu Mar 15 11:24:03 CET 2012
+#Thu Mar 15 13:28:50 CET 2012
 eclipse.preferences.version=1
+encoding//html/getting_started/confWorkbench.html=UTF-8
 encoding//html/introduction/introduction_project.html=UTF-8
