--- a/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.geometric/plugin.xml
@@ -73,6 +73,9 @@
                maxOccurrence="1"
                minOccurrence="0"
                name="referenceSystem">
+            <validator
+                  class="eu.esdihumboldt.cst.functions.geometric.SRSValidator">
+            </validator>
          </functionParameter>
       </propertyFunction>
    </extension>
