possibility to clear instances/alignment/schemas
there are some issues with undo operations of alignment to be solved

refs #388

Change-Id: Iaebd34008aa69fed249568985b80cbf7eb1f23a7
Reviewed-on: http://gerrit.esdi-community.eu/954
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -166,6 +166,30 @@
                   name="HALE.separator2"
                   visible="true">
             </separator>
+            <menu
+                  label="Clear">
+               <command
+                     commandId="eu.esdihumboldt.hale.ui.schema.clear_source"
+                     style="push">
+               </command>
+               <command
+                     commandId="eu.esdihumboldt.hale.ui.schema.clear_target"
+                     style="push">
+               </command>
+               <command
+                     commandId="eu.esdihumboldt.hale.ui.instance.clear"
+                     style="push">
+               </command>
+               <command
+                     commandId="eu.esdihumboldt.hale.ui.align.clean"
+                     style="push">
+               </command>
+               
+            </menu>
+            <separator
+                  name="HALE.separator3"
+                  visible="true">
+            </separator>
             <dynamic
                   class="eu.esdihumboldt.hale.ui.service.project.RecentFilesMenu"
                   id="HALE.recentfiles">
