fixed build properties for user documentation bundles
refs #385

Change-Id: Ib5d68f32790a62bfd32db2dad41ea8372e98279f

--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
@@ -1,2 +1,6 @@
 bin.includes = META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               images/,\
+               html/,\
+               toc.views.xml,\
+               toc.gettingstarted.xml
