upated command names for mappable types
Change-Id: I2198f580ef7495194bb1c04d3807b5bf6eaa77ca
Reviewed-on: http://gerrit.esdi-community.eu/979
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -46,11 +46,11 @@
       </command>
       <command
             id="eu.esdihumboldt.hale.ui.schema.mappable_source"
-            name="Edit mappable source types">
+            name="Edit mapping relevant source types">
       </command>
       <command
             id="eu.esdihumboldt.hale.ui.schema.mappable_target"
-            name="Edit mappable target types">
+            name="Edit mapping relevant target types">
       </command>
       <command
             id="eu.esdihumboldt.hale.ui.schema.make_unmappable"
