--- a/io/plugins/eu.esdihumboldt.hale.io.html/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/plugin.xml
@@ -6,7 +6,7 @@
       <provider
             class="eu.esdihumboldt.hale.io.html.HtmlMappingExporter"
             id="eu.esdihumboldt.hale.io.htmlexporter"
-            name="HTML file">
+            name="HTML Mapping Documentation">
          <contentType
                ref="eu.esdihumboldt.hale.io.html">
          </contentType>
