Implemented asProperties() and createMessage() for TransformationMessage.
refs #310

Change-Id: I98d903a3c02831bdd139890a12c47e73c65f119c
Signed-off-by: Andreas Burchert <andreas.burchert@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -286,5 +286,16 @@
          </save>
       </action-file>
    </extension>
+   <extension
+         point="eu.esdihumboldt.hale.report">
+      <messageDefinition
+            class="eu.esdihumboldt.hale.common.align.transformation.report.impl.TransformationMessageImplDefinition"
+            id="eu.esdihumboldt.hale.common.core.transformation">
+      </messageDefinition>
+      <reportDefinition
+            class="eu.esdihumboldt.hale.common.align.transformation.report.impl.TransformationReportImplDefinition"
+            id="eu.esdihumboldt.hale.common.core.transformation">
+      </reportDefinition>
+   </extension>
 
 </plugin>
